force-app/main/default/objects/Packing_List_Line_Item__c/Packing_List_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Packing List Line Item</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>DC No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing List Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>