force-app/main/default/objects/Packing_List_Line_Item__c/fields/BOX_No__c.field-meta.xml
<CustomField>
    <fullName>BOX_No__c</fullName>
    <label>BOX No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>