force-app/main/default/objects/Packing_List_Line_Item__c/fields/Box_Type__c.field-meta.xml
<CustomField>
    <fullName>Box_Type__c</fullName>
    <label>Box Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wooden</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Loose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>