force-app/main/default/objects/Packing_List_Line_Item__c/fields/Customer_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_No__c</fullName>
    <label>Customer Part No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>