force-app/main/default/objects/Packing_List_Line_Item__c/fields/DC_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Date__c</fullName>
    <label>DC Date</label>
    <type>Date</type>
</CustomField>