force-app/main/default/objects/Packing_List_Line_Item__c/fields/Gross_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Kgs__c</fullName>
    <label>Gross Weight (Kgs)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>