force-app/main/default/objects/Packing_List_Line_Item__c/fields/Height_Inches_CMS__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches_CMS__c</fullName>
    <label>Height (Inches,CMS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>