force-app/main/default/objects/Packing_List_Line_Item__c/fields/Length_Inches_CMS__c.field-meta.xml
<CustomField>
    <fullName>Length_Inches_CMS__c</fullName>
    <label>Length(Inches,CMS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>