force-app/main/default/objects/Packing_List_Line_Item__c/fields/Packing_List__c.field-meta.xml
<CustomField>
    <fullName>Packing_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing List</label>
    <referenceTo>Packing_List__c</referenceTo>
    <relationshipLabel>Packing List Line Items</relationshipLabel>
    <relationshipName>Packing_List_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>