force-app/main/default/objects/Packing_List_Line_Item__c/fields/Part_No__c.field-meta.xml
<CustomField>
    <fullName>Part_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part No.</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Packing List Line Items</relationshipLabel>
    <relationshipName>Packing_List_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>