force-app/main/default/objects/Packing_List_Line_Item__c/fields/Width_Inches_CMS__c.field-meta.xml
<CustomField>
    <fullName>Width_Inches_CMS__c</fullName>
    <label>Width (Inches,CMS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>